--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sass": "^1.32.5",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
   }
